traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:13: error: value East is not a member of object plm.universe.Direction
  return (estFaceMur && estDroiteMur && getDirection==Direction.East)
                                                                ^